k8s/base/inventory-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: demi
  labels:
    app: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
