k8s/base/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: demi
  labels:
    app: order-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: order-service
